envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
            config: {}
          route_config:
            virtual_hosts:
            - name: virtual_hosts
              domains: "*"
              routes:
              - name: "c-short"
                match:
                  prefix: "/cu/"
                route:
                  prefix_rewrite: "/"
                  cluster: customerapi
              - name: "account"
                match:
                  prefix: "/ac/"
                route:
                  prefix_rewrite: "/"
                  cluster: accountapi  
  clusters:
  - name: customerapi
    type: STRICT_DNS
    connect_timeout: 1s
    hosts:
    - socket_address:
        address: Customer.Api
        port_value: 80
  - name: accountapi
    type: STRICT_DNS
    connect_timeout: 1s
    hosts:
    - socket_address:
        address: Account.Api
        port_value: 80
